...

    private func showNextQuestionOrResult() {
        if isLastQuestion() {
            let message = makeResultsMessage()

            let alertModel = AlertModel(
                title: "Этот раунд окончен!",
                message: message,
                buttonText: "Сыграть ещё раз",
                completion: { [weak self] in
                    self?.restartGame()
                }
            )

            alertPresenter.showAlert(with: alertModel)
...
